--- a/views/campGround.ejs
+++ b/views/campGround.ejs
@@ -1,5 +1,9 @@
+<%- include(partials/header) %>
+
 <h1>WELCOME TO CAMPGROUNDS PAGE!!</h1>
 
 <p>
     this will show you all the camping sites
 </p>
+
+<%- include(partials/footer) %>
