--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,10 @@
+<%- include(partials/header) %>
+
+
 <h1>LANDING PAGE</h1>
 
 <p>
     welcome to yelpcamp app!
 </p>
+
+<%- include(partials/footer) %>
