furthur changes added

--- a/views/campGround.ejs
+++ b/views/campGround.ejs
@@ -1,4 +1,4 @@
-<%- include(partials/header) %>
+<%- include("partials/header") %>
 
 <h1>WELCOME TO CAMPGROUNDS PAGE!!</h1>
 
@@ -6,4 +6,4 @@
     this will show you all the camping sites
 </p>
 
-<%- include(partials/footer) %>
+<%- include("partials/footer") %>
