--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,4 @@
-<%- include(partials/header) %>
+<%- include("partials/header") %>
 
 
 <h1>LANDING PAGE</h1>
@@ -7,4 +7,4 @@
     welcome to yelpcamp app!
 </p>
 
-<%- include(partials/footer) %>
+<%- include("partials/footer") %>
