further changes added

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,5 +6,8 @@
 <p>
     welcome to yelpcamp app!
 </p>
+<a href="/campGrounds">All campgrounds here</a>
+<br>
+<a href="/campGrounds/new">Add new campgrounds</a>
 
 <%- include("partials/footer") %>
