--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,6 +1,7 @@
-<h1>ADD A NEW CAMP GOUUND</h1>
+<h1>ADD A NEW CAMP GROUND</h1>
 
 <form method="post" action="/campGrounds">
     <input type="text" name="name" placeholder="name">
     <input type="text" name="image" placeholder="image url">
+    <button>SUBMIT</button>
 </form>
