--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,13 +1,18 @@
 <%- include("partials/header") %>
 
-
-<h1>LANDING PAGE</h1>
-
-<p>
-    welcome to yelpcamp app!
-</p>
-<a href="/campGrounds">All campgrounds here</a>
-<br>
-<a href="/campGrounds/new">Add new campgrounds</a>
+<div class="container">
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Welcome to yelpcamp app!</h1>
+        </div>
+    </div>
+    <div class="btn btn-secondary btn-lg">
+        <a href="/campGrounds">All campgrounds here</a>
+    </div>
+    <br>
+    <div class="btn btn-secondary btn-lg">
+        <a href="/campGrounds/new">Add new campgrounds</a>
+    </div>
+</div>
 
 <%- include("partials/footer") %>
