--- a/views/campGrounds.ejs
+++ b/views/campGrounds.ejs
@@ -4,7 +4,7 @@
         <div class="container">
             <h1>Camp Grounds</h1>
             <p>
-                Here are the hand-picked camping destinations for you just a click away
+               <h4> Hand-Picked camping destinations </h4>
             </p>
             <p class="btn btn-secondary btn-lg">
                 <a href="/">Home</a>
