--- a/views/campGrounds.ejs
+++ b/views/campGrounds.ejs
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="row" style="display: flex; flex-wrap: wrap;">
-       <!-- <% var campGroundsArray = Object.values(campGrounds) %> -->
+       <% var campGroundsArray = Object.values(campGrounds) %>
             <% campGroundsArray.forEach(function(campGround){ %>
                 <div class="col-md-3 col-sm-6"> 
                     <div class="thumbnail">
