--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,7 +12,11 @@
         </div>
         <div class="form-group">
           <label for="campGroundImage"> <h4>Camp Ground Image URL</h4> </label>
-          <input type="text" class="form-control" name="image">
+          <input type="url" class="form-control" name="image">
+        </div>
+        <div class="form-group">
+          <label for="campGroundDescription"> <h4>Camp Ground Description</h4> </label>
+          <input type="text" class="form-control" name="desc">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
