--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -11,7 +11,7 @@
     </div>
     <br>
     <div class="btn btn-secondary btn-lg">
-        <a href="/campGrounds/new">Add new campgrounds</a>
+        <a href="/campGrounds/new">Add new campground</a>
     </div>
 </div>
 
