--- a/views/campGrounds/show.ejs
+++ b/views/campGrounds/show.ejs
@@ -2,13 +2,62 @@
 
 <div class="container">
 
-<h1> <%= campGround.name %></h1>
+    <div class="row">
+        <div class="col-md-3">
+            <p class="lead">YelpCamp</p>
+            <div class="list-group">
+                <li class="list-group-item active">info 1</li>
+                <li class="list-group-item">info 2</li>
+                <li class="list-group-item">info 3</li>
+            </div>
+            <!-- MAP -->
+        </div>
+        <div class="col-md-9">
+            <div class="thumbnail">
+                <img class="image-responsive" src="<%= campGround.image %>">
+                <div class="caption-full">
+                    <h4 class="pull-right">$9/night</h4>
+                    <h4><a><%= campGround.name %></a></h4>
+                    <p>
+                        <%= campGround.desc %>
+                    </p>
+                </div>
+            </div>
+            <div class="well">
+                <div class="text-right">
+                    <a class="btn-btn-success" href="/campGrounds/<%= campGround._id %>/comments/new">add comment</a>
+                </div>
+                <hr>
+                <% campGround.forEach(function(comment){
+                    <div class="row">
+                        <div class="col-md-12">
+                            <strong><%= comment.author %></strong>
+                            <span class="pull-right">10 days ago</span>
+                            <p>
+                                <%= comment.text %>
+                            </p>
+                        </div>
+                    </div>
+                });
+            </div>
+        </div>
+    </div>
 
-<img src="<%= campGround.image %>">
+    <h1> <%= campGround.name %></h1>
 
-<p>
-    <%= campGround.desc %>
-</p>
+    <img src="<%= campGround.image %>">
+
+    <p>
+        <%= campGround.desc %>
+    </p>
+
+    <% campGround.comments.forEach(function(comment){ %>
+        <p>
+            <strong> <%= comment.author %> </strong> - <%= comment.text %>
+        </p>
+    <% }); %>
+
+    <a href="/campGrounds/<%= campGround._id %>/comments/new">add comment</a>
 
 </div>
 
